# OPENCV_SPEED_TEST

./: CMakeLists.txt  opencvt.cpp  timer.cpp  timer.h
